killing some equals

--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -167,11 +167,11 @@
 \setbeamertemplate{theorem end}{\end{\inserttheoremblockenv}}
 
 %% head line
-\newlength{\btdl@leftindent} \btdl@leftindent=6.5em
+\newlength{\btdl@leftindent} \btdl@leftindent6.5em
 \setbeamersize{sidebar width left=\btdl@leftindent}
 
-\newlength\btdl@frametitle@ht \btdl@frametitle@ht=5ex
-\newlength\btdl@frametitle@dp \btdl@frametitle@dp=1.25ex
+\newlength\btdl@frametitle@ht \btdl@frametitle@ht5ex
+\newlength\btdl@frametitle@dp \btdl@frametitle@dp1.25ex
 
 \def\btdl@slideshade{35}
 \setbeamertemplate{frametitle}{%
