--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -398,7 +398,7 @@
 \def\btdl@outro@right{}
 \def\outroright#1{\gdef\btdl@outro@right{#1}}
 
-\AtEndDocument{
+\AtEndDocument{%
 \begingroup
 \setbeamercolor{background canvas}{bg=btdl@color@primary}%
 \begin{frame}[plain,t]%
