--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -185,7 +185,7 @@
 \def\btdl@sidebar@content{}
 \def\SidebarCite#1{%
     \appto\btdl@sidebar@content{%
-        \cite{#1}: \citetitle{#1}~\hfill\textcolor{gray}{\citeyear{#1}}\par
+        \cite{#1}:~~\btdl@sb@rawcite{#1}\par
     }%
 }
 \def\SidebarFakeCite#1{%
@@ -398,7 +398,8 @@
 \DeclareBibliographyAlias{thesis}{btdl@bibtheme}%
 \DeclareBibliographyAlias{unpublished}{btdl@bibtheme}%
 \DeclareBibliographyAlias{*}{btdl@bibtheme}%
-\DeclareNameFormat{btdl@blx@nf}{\namepartfamily}
+\DeclareNameFormat{btdl@blx@nf}{\namepartfamily}%
+\DeclareFieldFormat{btdl@sb@title}{\textit{##1}}%
 \DeclareCiteCommand\btdl@sb@rawcite
 {\citetrackerfalse\pagetrackerfalse
 \usebibmacro{prenote}}%
@@ -408,7 +409,7 @@
 \let\@tmp\@empty
 \ifhyperref{\iffieldundef{url}{}{\let\@tmp\btdl@lhook}}{}%
 \@tmp{%
-\printfield{labeltitle}~\hfill\textcolor{gray}{\printnames[btdl@blx@nf][1-1]{author},~\printfield{year}}%
+\printfield[btdl@sb@title]{labeltitle}\hfill\mbox{\textcolor{gray}{\printnames[btdl@blx@nf][1-1]{author},~\printfield{year}}}%
 }%
 }%
 {\multicitedelim}%
