--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -378,7 +378,7 @@
     \usebibmacro{title}%
     \newblock
     \printtext{\space}%
-    \textcolor{btdl@color@primary!35!white}{\usebibmacro{date}}%
+    \mbox{\textcolor{btdl@color@primary!35!white}{\usebibmacro{date}}}%
     \newblock
     \usebibmacro{finentry}}}%
 \DeclareBibliographyAlias{article}{btdl@bibtheme}%
