--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -128,7 +128,7 @@
     \vskip.35cm%
     \hspace*{-.25cm}\begin{tikzpicture}
         \path[fill=cprimary, rounded corners=1.25pt] rectangle ++(\paperwidth-.5cm,2.125em);
-        \node[right] at(0,2.125em/2-.075em){\LARGE\strut\insertframetitle};%smash
+        \node[right,text width=\paperwidth-.5cm-.666em] at(0,2.125em/2-.075em){\LARGE\strut\insertframetitle};%smash
     \end{tikzpicture}%
 }
 
