try without newtxmath: currently missing some symbols

--- a/lucy/beamerthemelucy.sty
+++ b/lucy/beamerthemelucy.sty
@@ -23,7 +23,7 @@
 % load font
 \ifbtl@usefont@
 \RequirePackage{aurical}
-\RequirePackage[cmintegrals,cmbraces,ebgaramond]{newtxmath}
+% \RequirePackage[cmintegrals,cmbraces,ebgaramond]{newtxmath}
 \RequirePackage[default]{lato}
 \RequirePackage{mathastext}
 \AtBeginDocument{\fontseries{m}\selectfont}
