--- a/dividing-lines/beamerthemedividing-lines.sty
+++ b/dividing-lines/beamerthemedividing-lines.sty
@@ -416,7 +416,8 @@
 %% Allow for another thing on the right side
 \def\btdl@outro@right{}
 \def\outroright#1{\gdef\btdl@outro@right{#1}}
-
+\def\btdl@postpage{}
+\def\PostPage#1{\def\btdl@postpage{#1}}
 \AtEndDocument{%
 \begingroup
 \setbeamercolor{background canvas}{bg=btdl@color@primary}%
@@ -438,7 +439,7 @@
 }\hfill\parbox[b]{.35\textwidth}{%
 {\hbox{}\hfill\footnotesize\ifx\btdl@outro@right\@empty\href{mailto:\btdl@email}{\btdl@email}\else\btdl@outro@right\fi}%
 }}%
-\endminipage
+\endminipage\btdl@postpage
 \end{frame}
 \endgroup
 }
